fix: deal with spacing somewhat

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,10 +1,5 @@
 .main {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  gap: 1rem;
-  padding: 3rem 15rem;
+  padding: 2% 5%;
 }
 
 .description {
